2007-07-14 [colin]	2.10.0cvs21

	* src/toolbar.c
		Fix huge arrows
		Fix button workaround to be able to click
		if mouse was on button when it went un-
		sensitive.
		Revert previous commit, gtk_tool_item_set_homogeneous
		doesn't mean what it seems to mean ;-)

2007-07-14 [paul]	2.10.0cvs20

	* src/toolbar.c
		make homogeneous FALSE always

2007-07-13 [colin]	2.10.0cvs19

	* src/toolbar.c
	* src/toolbar.h
		Rework to fit the non-deprecated API
	* src/compose.c
	* src/folderview.c
	* src/mainwindow.c
	* src/messageview.c
	* src/summaryview.c
		Maemo layout changes. Better toolbars,
		removal of CTree headers. 

2007-07-13 [paul]	2.10.0cvs18

	* src/gtk/colorlabel.c
		fix bug 1261, '[DE] coloring messages in overview 
		keys are not localised'
		the string is now included in claws-mail.pot

2007-07-13 [colin]	2.10.0cvs17

	* src/summaryview.c
		Fix bug 1267, 'printing mutliple messages 
		opens one message-dialog after the other'
		Ask for confirmation when printing 10
		messages or more.

2007-07-11 [colin]	2.10.0cvs16

	* COPYING
	* README
	* autogen.sh
	* manual/claws-mail-manual.xml
	* manual/gpl.xml
	* manual/es/claws-mail-manual.xml
	* manual/es/gpl.xml
	* manual/fr/claws-mail-manual.xml
	* manual/fr/gpl.xml
	* manual/pl/gpl.xml
	* src/account.c
	* src/account.h
	* src/action.c
	* src/action.h
	* src/adbookbase.h
	* src/addr_compl.c
	* src/addr_compl.h
	* src/addrbook.c
	* src/addrbook.h
	* src/addrcache.c
	* src/addrcache.h
	* src/addrcindex.c
	* src/addrcindex.h
	* src/addrclip.c
	* src/addrclip.h
	* src/addrdefs.h
	* src/addressadd.c
	* src/addressadd.h
	* src/addressbook.c
	* src/addressbook.h
	* src/addressbook_foldersel.c
	* src/addressbook_foldersel.h
	* src/addressitem.h
	* src/addrgather.c
	* src/addrgather.h
	* src/addrharvest.c
	* src/addrharvest.h
	* src/addrindex.c
	* src/addrindex.h
	* src/addritem.c
	* src/addritem.h
	* src/addrquery.c
	* src/addrquery.h
	* src/addrselect.c
	* src/addrselect.h
	* src/alertpanel.c
	* src/alertpanel.h