@@ -1,3 +1,8 @@
+2007-07-14 [colin]	2.10.0cvs22
+
+	* src/toolbar.c
+		Fix button show/hide issues
+
 2007-07-14 [colin]	2.10.0cvs21
 
 	* src/toolbar.c
